fix(theme): fix checkbox on firefox, close #4267

--- a/packages/theme/src/client/modules/encrypt/styles/password-modal.scss
+++ b/packages/theme/src/client/modules/encrypt/styles/password-modal.scss
@@ -133,10 +133,12 @@
 
     vertical-align: text-bottom;
 
-    width: 0;
+    height: 1em;
     margin-inline-end: 18px;
 
     cursor: pointer;
+
+    appearance: none;
 
     &::after {
       content: " ";
@@ -193,6 +195,10 @@
         transform: rotate(45deg);
       }
     }
+  }
+
+  label {
+    display: inline-block;
   }
 }
 
